--- a/styles/style.css
+++ b/styles/style.css
@@ -8,27 +8,27 @@ body {
 .header {
     display: flex;
     background-color: #020f2a;
-    width: 1350px;
+    width: 1150px;
     height: 643px;
-    margin: 50px 140px 20px 140px;
+    margin: 50px 100px 20px 100px;
     border-radius: 30px;
 
 }
 
 .content {
-    margin: 80px 100px 120px 105px;
+    margin: 80px 100px 100px 105px;
     color: white;
 }
 
 .content h1 {
-    font-size: 70px;
+    font-size: 45px;
     font-weight: 700;
 }
 
 .content p {
     font-size: 15px;
     font-weight: 400;
-    margin-bottom: 30px;
+    margin-bottom: 5em;
 }
 
 .live-button {
@@ -77,11 +77,11 @@ body {
 
 .main-sec {
 
-    width: 1350px;
-    height: 643px;
-    margin: 100px 140px 100px 140px;
+    width: 1150px;
+    height: 500px;
+    margin: 50px 100px 100px 100px;
     display: flex;
-    column-gap: 1.5em;
+    column-gap: 1em;
 }
 
 .nav {
@@ -89,6 +89,7 @@ body {
     width: 320px;
     height: 320px;
     border-radius: 10px;
+    margin-right: 2em;
 }
 
 .main-nav ul {
@@ -125,12 +126,13 @@ body {
 .upcoming-match{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    column-gap: 30px;
+    column-gap: 10px;
 }
 
 .team-info {
     border: 1px solid #0a389c;
     height: 242px;
+    width: 100%;
     border-radius: 5px;
 }
 .team-info:hover{
@@ -142,22 +144,30 @@ body {
 }
 .flag{
     display: flex;
-    column-gap: 1em;
-    font-size: 20px;
+    padding-left: 10px;
+    column-gap: 10px;
+    font-size: 15px;
     font-weight: 600;
 }
 .flag img{
-    width: 93.04px;
-    height: 56.18px;
+    width: 55px;
+    height: 50px;
 }
 .info{
     text-align: center;
+}
+.info h2{
+    font-size: 20px;
+}
+.info h4{
+    font-size: 15px;
+
 }
 
 /* Footer Style  */
 
 .footer{
-    width: 100%;
+
     height: 500px;
     background-color: #020f2a;
 }
