--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,7 @@ body {
     height: 643px;
     margin: 50px 100px 20px 100px;
     border-radius: 30px;
+    justify-items: center;
 
 }
 
@@ -54,8 +55,6 @@ body {
     padding: 8px 25px;
     border-radius: 10px;
     border: 3px solid rgba(16, 163, 212, 0.959);
-
-
 }
 
 .live-button:hover .fa-circle-arrow-right {
@@ -123,7 +122,8 @@ body {
     color: #020f2a;
     font-weight: 600;
 }
-.upcoming-match{
+
+.upcoming-match {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     column-gap: 10px;
@@ -135,90 +135,248 @@ body {
     width: 100%;
     border-radius: 5px;
 }
-.team-info:hover{
+
+.team-info:hover {
     border: 3px solid rgba(16, 163, 212, 0.959);
 
 }
-.team{
+
+.team {
     padding: 30px;
 }
-.flag{
+
+.flag {
     display: flex;
     padding-left: 10px;
     column-gap: 10px;
     font-size: 15px;
     font-weight: 600;
 }
-.flag img{
+
+.flag img {
     width: 55px;
     height: 50px;
 }
-.info{
+
+.info {
     text-align: center;
 }
-.info h2{
+
+.info h2 {
     font-size: 20px;
 }
-.info h4{
+
+.info h4 {
     font-size: 15px;
 
 }
 
+.view {
+    display: none;
+    margin-bottom: 50px;
+}
+
+.view a {
+    text-decoration: none;
+    font-size: 20px;
+    background-color: rgb(19, 51, 77);
+    color: white;
+    padding: 16px 25px;
+    border-radius: 5px;
+    border: 4px solid rgba(6, 65, 85, 0.959);
+    text-align: center;
+    margin-left: 45%;
+}
+
+.view a:hover {
+    background-color: #020f2a;
+    color: white;
+    border: 3px solid rgba(16, 163, 212, 0.959);
+}
+
 /* Footer Style  */
 
-.footer{
+.footer {
 
     height: 500px;
     background-color: #020f2a;
 }
-.title{
+
+.title {
     text-align: center;
     padding-top: 130px;
     padding-bottom: 50px;
     font-size: 40px;
     color: white;
 }
-.footer hr{
+
+.footer hr {
     width: 80%;
 }
-.footer-info ul{
+
+.footer-info ul {
+    display: flex;
     padding-top: 50px;
     list-style: none;
-    display: flex;
     column-gap: 20px;
     justify-content: center;
 }
-.footer-info ul li a{
+
+.footer-info ul li a {
     text-decoration: none;
     color: grey;
 }
-.footer-info ul li:hover a{
+
+.footer-info ul li:hover a {
     font-size: larger;
     color: white;
 }
-.social{
+
+.social {
     font-size: 25px;
 }
-.social ul{
+
+.social ul {
     display: flex;
     column-gap: 30px;
 }
-.social ul li:hover{
+
+.social ul li:hover {
     border: 3px solid rgba(16, 163, 212, 0.959);
     background-color: white;
     border-radius: 10px;
     padding: 0 10px;
 }
-.social ul li:hover a{
+
+.social ul li:hover a {
     color: #020f2a;
 }
 
-.social ul li span{
+.social ul li span {
     display: none;
 }
-.social ul li:hover span{
+
+.social ul li:hover span {
     display: inline;
     color: #020f2a;
     font-weight: 600;
 }
 
+/* Screen setting */
+/* for mobile device  */
+
+@media screen and (max-width: 688px) {
+    .header{
+        width: 80%;
+        display: block;
+        height: fit-content;
+        margin: 0;
+        border-radius: 20px;
+    }
+    .content{
+        text-align: center;
+        margin: 0;
+        width: 80%;
+        padding: 10%;
+    }
+    .content h1{
+        font-size: 30px;
+        font-weight: 500;
+    }
+    .content p{
+        font-size: 10px;
+        font-weight: 300;
+    }
+    .live-button{
+        font-size: 15px;
+        font-weight: 400;
+        padding: 2% 5%;
+
+    }
+
+    .banner-img{
+        display: flex;
+        width: 80%;
+        margin-left: 5%;
+    }
+    .banner-img img{
+        height: 300px;
+        width: 300px;
+    }
+    .live-button:hover {
+        display: none;
+    }
+    .main-sec{
+        display: block;
+        margin: 10%;
+        width: 80%;
+        height: fit-content;
+    }
+    .nav{
+        width: 80%;
+        background-color: white;
+    }
+
+    .main-nav li {
+        background-color: white;
+        text-align: center;
+        padding: 0;
+        border: 0px solid rgba(6, 65, 85, 0.959);
+        border-radius: 0px;
+    }
+    .main-nav li a{
+        color: white;
+        background-color: rgb(19, 51, 77);
+        padding: 10px;
+        border-radius: 5px;
+        border: 1px solid rgba(6, 65, 85, 0.959);
+
+
+    }
+    .main-nav li:hover {
+        border: 0px solid rgba(16, 163, 212, 0.959);
+        background-color: white;
+    }
+    .main-nav li a:hover{
+        color:#020f2a;
+        background-color: white;
+    }
+    .upcoming-match{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        column-gap: 0;
+        row-gap: 10px;
+
+    }
+    .team-info{
+        width: 80%;
+    }
+    .team {
+        padding: 30px ;
+    }
+    .footer{
+        width: 80%;
+        height: fit-content;
+    }
+    .footer-info ul {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        padding-top: 50px;
+        list-style: none;
+        column-gap: 0px;
+        row-gap: 10px;
+        justify-items: center;
+    }
+    
+
+
+    
+
+
+    
+
+    
+    
+
+
+}
