--- a/styles/style.css
+++ b/styles/style.css
@@ -267,7 +267,7 @@ body {
 
 @media screen and (max-width: 688px) {
     .header{
-        width: 80%;
+        width: 100%;
         display: block;
         height: fit-content;
         margin: 0;
@@ -308,13 +308,20 @@ body {
     }
     .main-sec{
         display: block;
-        margin: 10%;
         width: 80%;
         height: fit-content;
+        margin: 0;
+        align-items: center;
+        column-gap: 0;
+        margin-bottom: 10%;
     }
     .nav{
-        width: 80%;
+        width: 100%;
         background-color: white;
+        margin-right: 0;
+        padding-top: 20px;
+        padding-left: 20px;
+
     }
 
     .main-nav li {
@@ -350,33 +357,28 @@ body {
     }
     .team-info{
         width: 80%;
+        margin-left: 60px;
     }
     .team {
         padding: 30px ;
     }
     .footer{
-        width: 80%;
+        width: 100%;
         height: fit-content;
     }
     .footer-info ul {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
-        padding-top: 50px;
+        padding-top: 20px;
         list-style: none;
         column-gap: 0px;
         row-gap: 10px;
-        justify-items: center;
+        padding-left: 35%;
     }
-    
+    .social {
+        font-size: 15px;
+        padding-left: 10%;
+        padding-bottom: 10%;
 
-
-    
-
-
-    
-
-    
-    
-
-
+    }
 }
