--- a/styles/match-style.css
+++ b/styles/match-style.css
@@ -173,6 +173,28 @@ body {
     font-size: 15px;
 
 }
+.view {
+    display: none;
+    margin-bottom: 50px;
+}
+
+.view a {
+    text-decoration: none;
+    font-size: 20px;
+    background-color: rgb(19, 51, 77);
+    color: white;
+    padding: 16px 25px;
+    border-radius: 5px;
+    border: 4px solid rgba(6, 65, 85, 0.959);
+    text-align: center;
+    margin-left: 45%;
+}
+
+.view a:hover {
+    background-color: #020f2a;
+    color: white;
+    border: 3px solid rgba(16, 163, 212, 0.959);
+}
 
 /* Footer Style  */
 
