--- a/styles/match-style.css
+++ b/styles/match-style.css
@@ -240,6 +240,7 @@ body {
     background-color: white;
     border-radius: 10px;
     padding: 0 10px;
+    font-size: medium;
 }
 .social ul li:hover a{
     color: #020f2a;
