--- a/styles/style.css
+++ b/styles/style.css
@@ -246,6 +246,8 @@ body {
     background-color: white;
     border-radius: 10px;
     padding: 0 10px;
+    font-size: medium;
+
 }
 
 .social ul li:hover a {
