--- a/styles/blog.css
+++ b/styles/blog.css
@@ -1,10 +1,14 @@
-/* Body style  */
+/* -----------------------------------------------------
+                      Body style 
+------------------------------------------------------- */
 body {
     font-family: 'Poppins', sans-serif;
 }
 
 
-/* Header Style  */
+/* ----------------------------------------------------
+                     Header Style
+---------------------------------------------------------  */
 .header {
     display: flex;
     background-color: #020f2a;
@@ -73,7 +77,9 @@ body {
     height: 613px;
 }
 
-/* Main Style  */
+/*----------------------------------------------------------- 
+                            Main Style 
+------------------------------------------------------------ */
 
 .main-sec {
 
@@ -256,8 +262,11 @@ body {
     font-weight: 600;
 }
 
-/* media style  */
+/* ----------------------------------------------media style--------------------------------------------------------  */
 
+/* ------------------------------------------------------------------------------
+                                                mobile device 
+ ----------------------------------------------------------------------------------*/
 @media screen and (max-width: 688px) {
     .header{
         width: 100%;
@@ -404,10 +413,17 @@ body {
         font-size: medium;
 
     }
+    /* .social ul li:hover span{
+        display: block;
+        color: #020f2a;
+        font-weight: 600;
+    } */
     
 }
 
-/* for tab  */
+/* -----------------------------------------------------------------------------------------------
+                                            for tab
+  --------------------------------------------------------------------------------------------*/
 @media screen and (min-width:689px) and (max-width: 992px){
     @media screen and (min-width:689px) and (max-width: 992px){
         .header {
