--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,14 @@
-/* Body style  */
+/* -----------------------------------------------------
+                           Body style
+-----------------------------------------------------  */
 body {
     font-family: 'Poppins', sans-serif;
 }
 
 
-/* Header Style  */
+/* -------------------------------------
+                           Header Style
+--------------------------------------------------------  */
 .header {
     display: flex;
     background-color: #020f2a;
@@ -72,7 +76,9 @@ body {
     height: 613px;
 }
 
-/* Main Style  */
+/*-------------------------------------------------------------
+                         Main Style
+ ---------------------------------------------------------  */
 
 .main-sec {
 
@@ -194,7 +200,9 @@ body {
     border: 3px solid rgba(16, 163, 212, 0.959);
 }
 
-/* Footer Style  */
+/*--------------------------------------------------
+                              Footer Style
+ --------------------------------------------------------------  */
 
 .footer {
 
@@ -267,8 +275,10 @@ body {
 
 
 
-/* Screen setting */
-/* for mobile device  */
+/*------------------------------------------------- Screen setting------------------------------------------------------- */
+/* ---------------------------------------------
+                   for mobile device
+------------------------- ------------------------------ */
 
 @media screen and (max-width: 688px) {
     .header{
@@ -408,7 +418,9 @@ body {
     }
 }
 
-/* for tablet */
+/* ---------------------------------------------------------
+                                 for tablet
+-------------------------------------------------------------- */
 
 @media screen and (min-width:689px) and (max-width: 992px){
     .header {
